src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY()) - (YEAR(Date_of_Birth__c) - 

IF( 
AND(MONTH(Date_of_Birth__c) = 02, 
DAY(Date_of_Birth__c) = 29, 
TODAY() &gt; DATE(YEAR(TODAY()), 02, 28)), 
0,	
IF( 
TODAY() &gt;= DATE(YEAR(TODAY()), MONTH(Date_of_Birth__c), DAY(Date_of_Birth__c)), 
0, 
1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CV_Template_Types__c</fullName>
        <label>CV Template Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Duty</fullName>
                </value>
                <value>
                    <fullName>IT Support Fresher</fullName>
                </value>
                <value>
                    <fullName>IT Experienced</fullName>
                </value>
                <value>
                    <fullName>Business Management Fresher</fullName>
                </value>
                <value>
                    <fullName>Business Management Experience</fullName>
                </value>
                <value>
                    <fullName>Chef</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name_If_working__c</fullName>
        <label>Company Name (If working)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <label>Current City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Job_Status__c</fullName>
        <label>Current Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Actively Looking</fullName>
                </value>
                <value>
                    <fullName>Studying</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Highest_Qualification__c</fullName>
        <label>Highest Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 10 (Doctoral Degree)</fullName>
                </value>
                <value>
                    <fullName>Level 9 (Master Degree)</fullName>
                </value>
                <value>
                    <fullName>Level 8 (Postgraduate Certificate)</fullName>
                </value>
                <value>
                    <fullName>Level 8 (Postgraduate Diploma)</fullName>
                </value>
                <value>
                    <fullName>Level 8 (Bachelor Honours Degree)</fullName>
                </value>
                <value>
                    <fullName>Level 7 (Bachelor Degree)</fullName>
                </value>
                <value>
                    <fullName>Level 7 (Graduate Diploma)</fullName>
                </value>
                <value>
                    <fullName>Level 7 (Certificate)</fullName>
                </value>
                <value>
                    <fullName>Level 6 (Certificate)</fullName>
                </value>
                <value>
                    <fullName>Level 6 (Diploma)</fullName>
                </value>
                <value>
                    <fullName>Level 5 (Certificate)</fullName>
                </value>
                <value>
                    <fullName>Level 5 (Diploma)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentor_Skills__c</fullName>
        <label>Mentor Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Care</fullName>
                </value>
                <value>
                    <fullName>Business Management</fullName>
                </value>
                <value>
                    <fullName>Business Studies</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Conservation Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Construction and Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Driving</fullName>
                </value>
                <value>
                    <fullName>Education and Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Forestry and Mining</fullName>
                </value>
                <value>
                    <fullName>Health and Community</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Labour</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Telecommunication</fullName>
                </value>
                <value>
                    <fullName>Tourism and Recreation Farming</fullName>
                </value>
                <value>
                    <fullName>Transport and Logistics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Youth</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Set__c</fullName>
        <label>Skill Set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Care</fullName>
                </value>
                <value>
                    <fullName>Business Management</fullName>
                </value>
                <value>
                    <fullName>Business Studies</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Conservation Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Construction and Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Driving</fullName>
                </value>
                <value>
                    <fullName>Education and Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Forestry and Mining</fullName>
                </value>
                <value>
                    <fullName>Health and Community</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Labour</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Telecommunication</fullName>
                </value>
                <value>
                    <fullName>Tourism and Recreation Farming</fullName>
                </value>
                <value>
                    <fullName>Transport and Logistics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Donation__c</fullName>
        <label>Total Donation</label>
        <summarizedField>Donation__c.Amount__c</summarizedField>
        <summaryForeignKey>Donation__c.Devotee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(Total_Donation__c&gt;10000, IMAGE(&quot;/img/samples/stars_100.gif&quot;,&quot;Platinum&quot;),
IF(Total_Donation__c&gt;5000, IMAGE(&quot;/img/samples/stars_200.gif&quot;,&quot;Gold&quot;),
IF(Total_Donation__c&gt;3000, IMAGE(&quot;/img/samples/stars_300.gif&quot;,&quot;Silver&quot;),
IF(Total_Donation__c&gt;2000, IMAGE(&quot;/img/samples/stars_400.gif&quot;,&quot;Bronze&quot;),
IF(Total_Donation__c&gt;1000, IMAGE(&quot;/img/samples/stars_500.gif&quot;,&quot;Regular&quot;), IMAGE(&quot;/img/samples/stars_200.gif&quot;,&quot;Starter&quot;) 
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Status__c</fullName>
        <label>Visa Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Student Visa</fullName>
                </value>
                <value>
                    <fullName>Job Search Visa</fullName>
                </value>
                <value>
                    <fullName>Resident Visa</fullName>
                </value>
                <value>
                    <fullName>Permanent Resident Visa</fullName>
                </value>
                <value>
                    <fullName>Citizen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Youth</label>
    </listViews>
    <listViews>
        <fullName>Unattended_Youth</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Youth_Group</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>site</value>
        </filters>
        <label>Unattended Youth</label>
    </listViews>
    <recordTypes>
        <fullName>Devotees</fullName>
        <active>true</active>
        <label>Devotees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employer</fullName>
        <active>true</active>
        <label>Employer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mentors</fullName>
        <active>true</active>
        <label>Mentors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Youth_Group</fullName>
        <active>true</active>
        <label>Youth Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>